--- a/views/partials/_footer.ejs
+++ b/views/partials/_footer.ejs
@@ -14,6 +14,7 @@
   })();
   </script>
 
+<script src="//code.jivosite.com/widget/fPXqPST9MI" async></script>
 <div id="google_translate_element"></div>
 
 <script type="text/javascript">
